# Inventra-App

./: ec2-user-data.sh
backend/: .env  Cargo.toml  air.toml  go.mod  go.sum  main.go  sqlx-data.json
backend/.sqlx/: query-071a264508b6c673c0564bd3282a98a4acb45e903ad5378d79de84a58e909cb7.json  query-2048a5577c002a3b055e62e6e02bfccad5ee3c578ef519ece82bc943dc5e248e.json  query-8206e9d7c6d219c69fea716ff702ca9d8a8cf98a171461c64c3822ad690ec822.json  query-90691444daafbda8a6d1e09e1249bf43a172ebedcf79888ab67d31451d5299d5.json  query-b052db8b03c73cfcfea6a52673918395e813f7173207fd64909b70773b5e0b0e.json  query-dba25ff3a7d92d691a46f4f28aeb3be3b8f98174446335b4d9bf7c00a3978158.json  query-dbe79dc0d093d5b98d77aa4a0ff523ce0419c5e14078691aefaea079537cc63f.json  query-e11588853acf938cfe416e531067cb13e0090473f76d7895860e960f94812ef1.json  query-e1a0b9c9d33e213e3587db3c917d99b307cf74f38a99f708238ea98898a3af1e.json  query-e55174560c75abcfb1a1f1fe2fe59bd64f741d259035143f26eb65a7df7ae42b.json  query-ea44c4d3f4c719bf5f3a4a7df607e47ff787cd41640f2f15f408906316bc9171.json  query-ee5e98fa937b9a8eae7974f8439d71a6b38b147fcc3660d41a15e98d7cdaf965.json  query-fdd20d1515cfa89c4768345e81e30ddef6c07e8f4a517c5a88f712d690229034.json
backend/internal/handlers/: business_partner_handler.go  item_handler.go  user_handler.go
backend/internal/models/: business_partner.go  client.go  company.go  invoice.go  item.go  user.go
backend/internal/repository/: business_partner_repository.go  (+3 more)
backend/middlewares/: auth_middlewares.go
backend/src/: db.rs  lib.rs  main.rs
backend/utils/: jwt.go  password.go
(+103 files in other folders)
