[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.44.2", fearures = ["full"] }
uuid = "1.16.0"
